# Entra-Protocol-Lab

./: .dockerignore  .env  .gitignore  .sampleEnv  Dockerfile  Readme.md  app.py  pyproject.toml  run.py
app/: __init__.py  config.py
app/oidc/: client.py  routes.py
app/saml/: routes.py  settings.py  types.py
app/static/css/: app.css
app/static/js/: idpconfig-ui.js  integration-ui.js  jwt-ui.js  theme.js
app/templates/: idpconfig.html  integration.html
app/tools/: health.py  idpconfig.py  integration.py  jwt.py
app/utils/: crypto.py  html.py
